--- a/configs/variant/nikkei_shock_example.yaml
+++ b/configs/variant/nikkei_shock_example.yaml
@@ -1,7 +1,7 @@
 defaults:
   - override /database@_global_: island_small
   - override /evolution@_global_: zero_budget
-  - override /task@_global_: nikkei_scenario_generator
+  - override /task@_global_: nikkei_shock
   - override /cluster@_global_: local
   - _self_
 
