--- a/configs/task/nikkei_shock.yaml
+++ b/configs/task/nikkei_shock.yaml
@@ -30,13 +30,13 @@ evo_config:
 
     You are given:
       • Instruments with MTM, delta/vega/gamma/FX/DV01 sensitivities
-      • A fixed crisis-regime correlation matrix (stats.corr_crisis)
+      • A fixed crisis-regime correlation matrix (`stats.corr_crisis`)
       • Daily volatilities for equity, vol-of-vol, FX, and rates
-      • A fixed horizon (i.e., stats.horizon_days = 10)
+      • A fixed horizon (`stats.horizon_days`) for √T scaling
 
     Your job:
-      1. Infer the portfolio’s **true exposures** from the net Greeks.
-      2. Determine **what each hedge instrument is intended to insure**.
+      1. Infer the portfolio’s **true exposures** from the Greeks.
+      2. Determine **what each hedge instrument is intended to protect**.
       3. Identify **structural weaknesses / residual risks** in the hedge overlay.
       4. Propose **worst-case multi-factor shocks** that exploit those weaknesses.
 
@@ -48,15 +48,14 @@ evo_config:
       • rate-shock asymmetry (IR up vs. IR down)
       • mis-sized or over-concentrated hedges
 
-    Worst losses usually arise from **combinations** of shocks.  
-    Design **plausible but severe** stresses aligned with risk stats and crisis correlations—
-    not cartoonish extremes.
+    Worst losses usually arise from **combinations** of shocks. Design **plausible but severe** stresses 
+    aligned with risk stats and crisis correlations (not cartoonish extremes).
 
     ============================================================
     TYPE CONTRACT  (CRITICAL)
     ============================================================
 
-    You must use the following types:
+    The following types are available (imported) for you to use:
 
     ```python
     @dataclass
@@ -96,7 +95,7 @@ evo_config:
         description: str
         exposure: list[Instrument]
         hedge: list[Instrument]
-        net_greeks: GreeksBreakdown
+        greeks_breakdown: GreeksBreakdown
 
 
     @dataclass
@@ -141,51 +140,88 @@ evo_config:
 
     You must edit the contents of this function without changing the signature:
 
-        def analyze_hedge_weakness(
-            scenario: Scenario,
-            stats: RiskStats,
-        ) -> ScenarioResponse:
+    ```python
+    def analyze_hedge_weakness(
+        scenario: Scenario,
+        stats: RiskStats,
+    ) -> ScenarioResponse:
+    ```
+
+    Understand what is in `scenario` and use `stats` to evaluate how those risks
+    behave under stress. Use `scenario.greeks_breakdown` to understand the aggregate
+    delta/gamma/vega/FX/DV01 profile before designing the shocks.
+
+    Use `stats.corr_crisis` to choose **coherent co-movements** across equity,
+    volatility, FX, and interest rates.
+
+    In a typical equity crisis, for example, the following might happen:
+      • equity moves down
+      • implied volatility moves up
+      • FX moves in the adverse direction for the portfolio
+      • yields move in the direction that worsens DV01 exposure
+
+    Avoid factor-move combinations that contradict the correlations
+    unless you provide a clear, scenario-specific justification.
 
     You must return:
 
       • analysis (str)
-          - Multi-line, technically precise explanation.
-          - Must address:
-            • net exposures (delta/gamma/vega/FX/DV01)
-            • what each hedge intends to protect
-            • structural weaknesses and residual risks
-            • why your shock directions target those weaknesses
-          - Avoid generic or boilerplate language.
+
+        A multi-line, technically precise explanation that includes:
+          • net exposures (delta/gamma/vega/FX/DV01)
+          • what each hedge is intended to protect
+          • structural weaknesses and residual risks
+          • why your shock directions target those weaknesses
+
+        Avoid generic or boilerplate language.
 
       • shock_params (ShockParams)
-          - eq_shock_sigma, vol_shock_sigma, fx_shock_sigma, ir_shock_sigma:
-              signed 1-day sigma moves (before √T scaling).
-          - Must be **plausible**, **coherent**, and **loss-maximizing** given the portfolio:
-              • long delta  → equity down
-              • short gamma → large-magnitude equity move
-              • short vega  → vol up
-              • FX sign     → adverse currency move
-              • DV01 sign   → adverse yield move
-          - rationale fields: short explanation (1–2 sentences) or None.
+
+        Your proposed crisis shock in **signed sigma units**:
+          • eq_shock_sigma
+          • vol_shock_sigma
+          • fx_shock_sigma
+          • ir_shock_sigma
+
+        Shocks must be plausible, coherent, and adversarial to the portfolio’s net
+        risk exposures. For example, an adverse equity move for long-delta positions,
+        a large equity move for short-gamma, a volatility spike for short-vega, an
+        FX move that harms the portfolio’s FX exposure, and a yield move that
+        worsens the DV01.
+
+        Each rationale field must contain a short 1–2 sentence justification
+        (or None if not applicable).
 
     Notes:
-      • stats.horizon_days is fixed; you do NOT vary it.
-      • Crisis correlations are fixed; choose directions consistent with crisis behavior.
+      • `stats.horizon_days` is fixed; do NOT vary it.
+      • Crisis correlations are fixed; choose factor directions consistent with crisis regimes.
       • Avoid σ < 1 moves; tiny sigma shocks are not meaningful for crisis stress.
-      • Use combinations of factors when they reinforce the weakness.
-
-    Evaluator calculates joint_sigma:
-      • joint_sigma is a single number representing the overall severity of the shock.
-      • It measures the combined size of equity/vol/FX/IR movements in standard-deviation space.
-      • Bigger joint_sigma = more crisis shock.
-      • The objective is to create scenarios that have high loss_ratio with as small joint_sigma as possible.
-
-    Your shock_params (eq_shock_sigma, vol_shock_sigma, fx_shock_sigma, ir_shock_sigma) directly determine joint_sigma: 
-    larger or unrealistic sigma values increase joint_sigma.
+      • Combine factors when they reinforce the portfolio’s weaknesses.
 
     Goal:
-      Produce a **high-quality, scenario-specific analysis** and **well-justified
-      multi-factor shocks** that reveal the portfolio’s weakest points under a
+      Produce a high-quality, scenario-specific analysis and a well-justified
+      multi-factor shock that exposes the portfolio’s weakest points under a
       realistic multi-day crisis regime.
+
+      The shock magnitudes you choose (eq_shock_sigma, vol_shock_sigma,
+      fx_shock_sigma, ir_shock_sigma), together with the risk statistics in
+      `stats` (`stats.corr_crisis`, `stats.horizon_days`, etc.), determine the
+      overall severity of the stress.
+
+      Shocks should follow crisis-consistent directions implied by the correlation
+      matrix. Deviating from these patterns, or using excessively large magnitudes,
+      increases severity and makes the scenario less plausible.
+
+      Design an efficient stress: one that produces large portfolio losses while
+      keeping the combined factor shocks reasonably controlled (i.e., not
+      excessively extreme).
+
+    IMPORTANT STYLE REQUIREMENTS:
+      • Do NOT copy any sentences or phrases from this instruction verbatim.
+      • Your analysis must be written in your own words and tailored to the specific scenario.
+      • Avoid generic, template-like summaries; always reference concrete details
+        (instrument names, signs/magnitudes of net delta/gamma/vega/FX/DV01, shock
+        directions, factor moves, and P&L contributions).
+
 
 exp_name: nikkei_shock
