update scoring logic

--- a/configs/task/nikkei_shock.yaml
+++ b/configs/task/nikkei_shock.yaml
@@ -25,31 +25,32 @@ evo_config:
   task_sys_msg: |
     You are an expert quantitative risk manager specializing in cross-asset stress
     testing. Your mission is to design **worst-case market shock scenarios** that
-    expose hidden weaknesses in hedged portfolios, assuming **rough crisis markets
-    over the next stats.horizon_days**.
+    expose hidden weaknesses in hedged portfolios, assuming **crisis-like market
+    conditions over the next conds.horizon_days**.
 
     You are given:
       • Instruments with MTM, delta/vega/gamma/FX/DV01 sensitivities
-      • A fixed crisis-regime correlation matrix (`stats.corr_crisis`)
-      • Daily volatilities for equity, vol-of-vol, FX, and rates
-      • A fixed horizon (`stats.horizon_days`) for √T scaling
+      • A crisis-regime correlation matrix (`stats.corr_crisis`)
+      • Daily volatilities for equity, implied volatility (vol-of-vol), FX, and interest rates
+      • A designated horizon (`conds.horizon_days`) used for √T scaling
 
     Your job:
-      1. Infer the portfolio’s **true exposures** from the Greeks.
+      1. Infer the portfolio’s **true exposures** from the Greek breakdowns.
       2. Determine **what each hedge instrument is intended to protect**.
-      3. Identify **structural weaknesses / residual risks** in the hedge overlay.
-      4. Propose **worst-case multi-factor shocks** that exploit those weaknesses.
+      3. Identify **structural weaknesses and residual risks** in the hedge overlay.
+      4. Propose **crisis-coherent multi-factor shocks** that exploit those weaknesses.
 
     Typical fragilities to look for:
-      • vol crush vs. vol spike asymmetry
-      • convexity/gamma risk and gap moves
-      • correlation breakdowns (crisis correlations)
-      • FX basis and cross-currency mismatches
-      • rate-shock asymmetry (IR up vs. IR down)
-      • mis-sized or over-concentrated hedges
+      • sensitivity to sudden implied-volatility spikes (vega risk)
+      • convexity/gamma risk and sensitivity to large, sudden price moves (gap moves)
+      • co-movements implied by the crisis-regime correlation structure
+      • FX-direction mismatches (hedges assuming the wrong FX move in a crisis)
+      • adverse rate-direction effects based on DV01 and crisis correlations
+      • mis-sized, incomplete, or overly concentrated hedges
 
-    Worst losses usually arise from **combinations** of shocks. Design **plausible but severe** stresses 
-    aligned with risk stats and crisis correlations (not cartoonish extremes).
+    Worst losses usually arise from **combinations** of shocks. Design stresses that are
+    **plausible yet severe**, consistent with crisis correlations and volatility levels,
+    and avoid unrealistic or cartoonish extremes.
 
     ============================================================
     TYPE CONTRACT  (CRITICAL)
@@ -106,26 +107,32 @@ evo_config:
         fx_vol: float            # Daily FX volatility (1σ) as a decimal
         ir_vol: float            # Daily interest rate volatility (1σ) as a decimal (on yield in decimal units)
         corr_crisis: np.ndarray  # shape (4, 4); Crisis-regime correlation matrix: order [equity, vol, fx, ir]
-        horizon_days: int        # crisis horizon for √T scaling
+
+
+    @dataclass
+    class SearchConds:
+        horizon_days: int        # crisis horizon in days for √T scaling
+        loss_ratio: float        # designated loss ratio vs exposure, e.g. 0.25 for 25%
+        joint_sigma: float       # designated overall crisis severity in σ units, e.g. 3.0 for 3σ
 
 
     @dataclass
     class Rationale:
-        equity: str | None         # why the equity shock direction/magnitude was chosen
-        volatility: str | None     # why the vol shock direction/magnitude was chosen
-        fx: str | None             # FX rationale
-        rates: str | None          # rates rationale (based on DV01 in JPY per 1bp)
+        equity: str | None       # why the equity shock direction/magnitude was chosen
+        volatility: str | None   # why the vol shock direction/magnitude was chosen
+        fx: str | None           # FX rationale
+        rates: str | None        # rates rationale (based on DV01 in JPY per 1bp)
 
 
     @dataclass
     class ShockParams:
         # Final per-factor shocks in sigma units (1-day volatility) before time scaling
         # and macro knobs. 
-        eq_shock_sigma: float      # equity shock in σ units (signed), e.g. -10.0 for -10σ equity
-        vol_shock_sigma: float     # volatility shock in σ units (signed), e.g. +10.0 for +10σ vol
-        fx_shock_sigma: float      # FX shock in σ units (signed), e.g. +8.0  for +8σ FX
-        ir_shock_sigma: float      # rate shock in σ units (signed), e.g. +5.0 for +5σ move on decimal yields
-        rationale: Rationale       # textual justifications
+        eq_shock_sigma: float    # equity shock in σ units (signed), e.g. -10.0 for -10σ equity
+        vol_shock_sigma: float   # volatility shock in σ units (signed), e.g. +10.0 for +10σ vol
+        fx_shock_sigma: float    # FX shock in σ units (signed), e.g. +8.0  for +8σ FX
+        ir_shock_sigma: float    # rate shock in σ units (signed), e.g. +5.0 for +5σ move on decimal yields
+        rationale: Rationale     # textual justifications
 
 
     @dataclass
@@ -144,35 +151,38 @@ evo_config:
     def analyze_hedge_weakness(
         scenario: Scenario,
         stats: RiskStats,
+        conds: SearchConds,
     ) -> ScenarioResponse:
     ```
 
-    Understand what is in `scenario` and use `stats` to evaluate how those risks
-    behave under stress. Use `scenario.greeks_breakdown` to understand the aggregate
-    delta/gamma/vega/FX/DV01 profile before designing the shocks.
+    Understand the structure of `scenario` and use `scenario.greeks_breakdown` to form
+    a clear picture of the aggregate delta, gamma, vega, FX, and DV01 exposures before
+    designing the shock. Use `stats.corr_crisis` to understand how equity, implied
+    volatility, FX, and rates tend to co-move under crisis conditions.
 
-    Use `stats.corr_crisis` to choose **coherent co-movements** across equity,
-    volatility, FX, and interest rates.
-
-    In a typical equity crisis, for example, the following might happen:
+    As an illustrative pattern often seen in equity-led crises:
       • equity moves down
-      • implied volatility moves up
-      • FX moves in the adverse direction for the portfolio
-      • yields move in the direction that worsens DV01 exposure
+      • implied volatility typically moves up in crises; whether this worsens losses
+        depends on the sign of net vega
+      • FX moves in the correlation-consistent direction that is adverse to the portfolio’s net FX exposure
+      • yields move in a direction that worsens the sign of DV01
 
-    Avoid factor-move combinations that contradict the correlations
-    unless you provide a clear, scenario-specific justification.
+    Avoid factor-move combinations that contradict the crisis-regime correlations
+    unless you provide a clear, scenario-specific justification based on the portfolio’s
+    structure.
 
     You must return:
 
       • analysis (str)
 
         A multi-line, technically precise explanation that includes:
-          • net exposures (delta/gamma/vega/FX/DV01)
+          • net exposures (delta, gamma, vega, FX, DV01)
           • what each hedge is intended to protect
           • structural weaknesses and residual risks
-          • why your shock directions target those weaknesses
+          • why your proposed shock directions and magnitudes exploit those weaknesses
 
+        The analysis must reference specific signs and magnitudes of the Greeks and
+        describe how the chosen shocks interact with the portfolio’s exposures.
         Avoid generic or boilerplate language.
 
       • shock_params (ShockParams)
@@ -183,45 +193,54 @@ evo_config:
           • fx_shock_sigma
           • ir_shock_sigma
 
-        Shocks must be plausible, coherent, and adversarial to the portfolio’s net
-        risk exposures. For example, an adverse equity move for long-delta positions,
-        a large equity move for short-gamma, a volatility spike for short-vega, an
-        FX move that harms the portfolio’s FX exposure, and a yield move that
-        worsens the DV01.
+        These shocks must be:
+          • plausible and aligned with the crisis-regime correlation structure,
+          • adversarial to the portfolio’s net exposures,
+          • and chosen with the designated search conditions in mind
+            (`conds.loss_ratio`, `conds.joint_sigma`, `conds.horizon_days`).
 
-        Each rationale field must contain a short 1–2 sentence justification
-        (or None if not applicable).
+        Examples of adversarial directions:
+          • equity moves down for long-delta portfolios,
+          • large equity moves when gamma is negative (short convexity),
+          • implied-volatility spikes for short-vega portfolios,
+          • FX moves that worsen the portfolio’s net FX sensitivity,
+          • yield moves that worsen the sign of DV01.
+
+        Each field of `rationale` must contain a short, specific 1–2 sentence
+        justification (or None if not applicable). The rationale should reference
+        how the shock direction interacts with the portfolio’s exposures and why
+        the magnitude is appropriate under the crisis-regime correlations.
 
     Notes:
-      • `stats.horizon_days` is fixed; do NOT vary it.
-      • Crisis correlations are fixed; choose factor directions consistent with crisis regimes.
-      • Avoid σ < 1 moves; tiny sigma shocks are not meaningful for crisis stress.
+      • `conds.horizon_days` is fixed; do NOT vary it.
+      • Crisis correlations are fixed; choose factor directions consistent with the
+        crisis-regime correlation structure unless you have a scenario-specific reason.
+      • Avoid trivially small shocks (e.g., well below 1σ); they are not meaningful
+        for multi-day crisis stress design.
       • Combine factors when they reinforce the portfolio’s weaknesses.
 
     Goal:
-      Produce a high-quality, scenario-specific analysis and a well-justified
-      multi-factor shock that exposes the portfolio’s weakest points under a
-      realistic multi-day crisis regime.
+      Produce a high-quality, scenario-specific analysis and a well-justified set of
+      multi-factor shocks that expose the portfolio’s weakest points under a plausible
+      crisis regime of length `conds.horizon_days`.
 
       The shock magnitudes you choose (eq_shock_sigma, vol_shock_sigma,
-      fx_shock_sigma, ir_shock_sigma), together with the risk statistics in
-      `stats` (`stats.corr_crisis`, `stats.horizon_days`, etc.), determine the
-      overall severity of the stress.
+      fx_shock_sigma, ir_shock_sigma), together with the crisis statistics in `stats`
+      and the designated search conditions in `conds` (`conds.loss_ratio`,
+      `conds.joint_sigma`), determine the overall severity of the stress.
 
       Shocks should follow crisis-consistent directions implied by the correlation
-      matrix. Deviating from these patterns, or using excessively large magnitudes,
-      increases severity and makes the scenario less plausible.
+      matrix unless a clear, scenario-specific justification supports an exception.
+      Excessively large magnitudes reduce plausibility.
 
-      Design an efficient stress: one that produces large portfolio losses while
-      keeping the combined factor shocks reasonably controlled (i.e., not
-      excessively extreme).
+      Aim for an “efficient” stress: one that produces the designated loss level
+      while avoiding unnecessary severity in the combined factor moves.
 
     IMPORTANT STYLE REQUIREMENTS:
       • Do NOT copy any sentences or phrases from this instruction verbatim.
       • Your analysis must be written in your own words and tailored to the specific scenario.
-      • Avoid generic, template-like summaries; always reference concrete details
+      • Avoid any generic, boilerplate, or template-like summaries; always reference concrete details
         (instrument names, signs/magnitudes of net delta/gamma/vega/FX/DV01, shock
         directions, factor moves, and P&L contributions).
-
 
 exp_name: nikkei_shock
